--- a/styles.css
+++ b/styles.css
@@ -17,4 +17,106 @@ body {
   background: white;
 }
 
+section {
+  width: 100vw;
+  min-height: 100vh;
+}
+
+#showcase {
+  position: fixed;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+#showcase #me {
+  font-family: Lora, serif;
+  font-weight: 700;
+  margin-left: 10vw;
+}
+#showcase #me h1 {
+  font-size: 70px;
+  line-height: 80px;
+}
+@media (max-width: 1200px) {
+  #showcase #me h1 {
+    font-size: 50px;
+    line-height: 60px;
+  }
+}
+@media (max-width: 1000px) {
+  #showcase #me h1 {
+    font-size: 40px;
+    line-height: 50px;
+  }
+}
+#showcase #me h2 {
+  font-size: 28px;
+  line-height: 25px;
+  margin-left: 45px;
+}
+@media (max-width: 1200px) {
+  #showcase #me h2 {
+    font-size: 24px;
+    line-height: 22px;
+    margin-left: 35px;
+  }
+}
+@media (max-width: 1000px) {
+  #showcase #me h2 {
+    font-size: 22px;
+    line-height: 20px;
+    margin-left: 27px;
+  }
+}
+@media (max-width: 450px) {
+  #showcase #me h2 {
+    font-size: 18px;
+    line-height: 16px;
+  }
+}
+#showcase #me span {
+  position: relative;
+}
+#showcase #me span::before {
+  content: "";
+  position: absolute;
+  bottom: 2px;
+  height: 3px;
+  width: 100%;
+  background: #080808;
+}
+@media (max-width: 850px) {
+  #showcase #me span::before {
+    height: 2px;
+  }
+}
+@media (max-width: 850px) {
+  #showcase #me {
+    align-self: start;
+  }
+}
+#showcase #portrait {
+  height: 70vh;
+}
+@media (max-width: 1000px) {
+  #showcase #portrait {
+    height: 55vh;
+  }
+}
+@media (max-width: 850px) {
+  #showcase #portrait {
+    max-width: 60vw;
+    max-height: 60vh;
+    height: auto;
+  }
+}
+@media (max-width: 850px) {
+  #showcase {
+    flex-direction: column-reverse;
+    align-items: end;
+    justify-content: space-between;
+    padding: 10vh 0;
+  }
+}
+
 /*# sourceMappingURL=styles.css.map */
