--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -17,7 +17,12 @@ body {
 	background: $primary-bg;
 }
 
+a {
+	color: inherit;
+	text-decoration: none;
+}
+
 section {
-	width: 100vw;
+	width: 100%;
 	min-height: 100vh;
 }
