--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -10,7 +10,7 @@ html, body {
 } 
 
 body {
-	font-family: "Roboto", sans-serif;
+	font-family: sans-serif;
 	font-size: 14px;
 	font-weight: 400;
 	color: $primary-color;
@@ -20,9 +20,4 @@ body {
 a {
 	color: inherit;
 	text-decoration: none;
-}
-
-section {
-	width: 100%;
-	min-height: 100vh;
 }
