Creating the new design and the basic API.

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,4 +1,18 @@
 @import "variables";
 @import "base";
 
+@import "scrollbar";
+
+@import "animations/fade-out";
+@import "animations/loading-blur-text";
+@import "animations/slide-up";
+
 @import "mixins/breakpoint";
+
+@import "components/button";
+
+@import "sections/loading";
+@import "sections/contact";
+@import "sections/hero";
+@import "sections/portfolio";
+@import "sections/footer";
