--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -7,17 +7,35 @@
 
 html, body {
 	height: 100%;
+	scroll-behavior: smooth;
 } 
 
 body {
-	font-family: sans-serif;
+	font-family: "Roboto Flex", sans-serif;
 	font-size: 14px;
-	font-weight: 400;
-	color: $primary-color;
+	font-weight: 300;
+	color: $primary-font-color;
 	background: $primary-bg;
+	overflow-x: hidden;
+	transition: transform .4s ease-in-out;
 }
 
 a {
 	color: inherit;
 	text-decoration: none;
+}
+
+main {
+	position: relative;
+	top: 105vh;
+}
+
+section {
+	width: 100%;
+}
+
+@for $i from 0 through 6 {
+	.animation[animation-order="#{$i + 1}"] {
+		animation-delay: 0.8s + $i * 0.1s !important;
+	}
 }
