--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,4 +1,2 @@
-$primary-color: rgb(8, 8, 8);
-$primary-bg: rgb(255, 255, 255);
-
-$dark-gray: rgb(42, 42, 42);
+$primary-font-color: rgb(250, 250, 250);
+$primary-bg: rgb(15, 15, 15);
